k8s/flask-ml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-ml
  labels:
    app: flask-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-ml
  template:
    metadata:
      labels:
        app: flask-ml
    spec:
      containers:
      - name: flask-ml
        image: dans9881/flask-ml
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-ml
spec:
  type: NodePort
  selector:
    app: flask-ml
  ports:
    - name: http
      port: 80
      targetPort: 5000
      nodePort: 30007
